# infx-condition-incremental-load

./: .gitignore  pyproject.toml
infx_condition_incremental_load/: core_data_types.py  main.py  terminology_resources.py
tests/: test_integration.py  test_terminology_resources.py
