[tool.poetry]
name = "infx-condition-incremental-load"
version = "0.1.0"
description = ""
authors = ["Rey Johnson <rey@projectronin.com>"]
readme = "README.md"
packages = [{include = "infx_condition_incremental_load"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
